--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
 
        
-    <img src="C:\xampp\htdocs\Horror\1960's\wpHorror.webp" style="width: 100%; height: 150%;">
+    <img src="wpHorror.webp" style="width: 100%; height: 150%;">
 
 
     <footer>
