--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </p>
 <nav>
     <ul>
-        <li><a href="C:\xampp\htdocs\Horror\Night of the living dead\index.html">The Night of the Living Dead</a></li>
+        <li><a href="https://williamtitus295661.github.io/Night-of-living-dead/The-Night-of-the-Living-Dead.html">The Night of the Living Dead</a></li>
         <li><a href="C:\xampp\htdocs\Horror\Village of the damned\index.html">The Village of the Damned</a></li>
     </ul>
 </nav>
